Disables scrollOverflow which fixes bug that destroyes background if window is resized while footer is active

--- a/css/global.scss
+++ b/css/global.scss
@@ -902,7 +902,10 @@ a#clip {
 
 
 
-
+#clip img {
+    height: 350px;
+    width: auto;
+}
 
 
 
